[metadata]
name = ak_sm_recorder
version = 1.0
author = Juan Carlos Miranda
author_email = juancarlos.miranda@udl.cat
description = A simple GUI recorder based on Python to manage Azure Kinect camera devices in a standalone mode.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GRAP-UdL-AT/ak_sm_recorder
project_urls =
    Bug Tracker = https://github.com/GRAP-UdL-AT/ak_sm_recorder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    certifi==2021.10.8
    charset-normalizer==2.0.12
    DateTime==4.4
    idna==3.3
    numpy==1.21.1
    opencv-python==4.5.3.56
    path==16.2.0
    pyk4a==1.3.0
    python-version==0.0.2
    pytz==2022.1
    requests==2.27.1
    urllib3==1.26.9
    zope.interface==5.4.0


[options.packages.find]
where = src

[options.package_data]
# If any package or subpackage contains *.txt or *.rst files, include them:
* = *.txt, *.rst, *.md
# Include any *.dat files found in the "data" subdirectory of the "ak_sm_recorder"
# package:
ak_sm_recorder = conf/*.conf
gui_single_mode = assets/*.png